--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <title>Lab 13</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Delius+Unicase|Gloria+Hallelujah|Indie+Flower|Lobster|Oswald|Pacifico|Ranga|Ravi+Prakash|Shadows+Into+Light" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Text+Me+One|Rubic|Coustard|Cookie|Space+Mono|Oswald|Codystar|Spirax|Cinzel|Macondo" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
