changed more style

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </span>
             <section id="header">
             <h1>
-            Let's Play with Words <br> and Decorations
+            Words & Decorations <br> May The Force Be With You
             </h1>
             
                 <button ng-click="addWords()">Words</button>
